syntax = "proto3";

package main;

option go_package = "./proto";

// 添加角色信息
message AddRoleReq {
  int64 id = 1; //角色id
  string role_name = 2; //名称
  string role_key = 3; //角色权限字符串
  int32 data_scope = 4; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
  int32 status = 5; //状态(1:正常，0:禁用)
  string remark = 6; //备注
  int32 del_flag = 7; //删除标志（0代表删除 1代表存在）
  string create_by = 8; //创建者
}

message AddRoleResp {
  string pong = 1;
}

// 删除角色信息
message DeleteRoleReq {
  repeated int64 ids = 1;
}

message DeleteRoleResp {
  string pong = 1;
}

// 更新角色信息
message UpdateRoleReq {
  int64 id = 1; //角色id
  string role_name = 2; //名称
  string role_key = 3; //角色权限字符串
  int32 data_scope = 4; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
  int32 status = 5; //状态(1:正常，0:禁用)
  string remark = 6; //备注
  int32 del_flag = 7; //删除标志（0代表删除 1代表存在）
  string update_by = 10; //更新者
}

message UpdateRoleResp {
  string pong = 1;
}

// 更新角色信息状态
message UpdateRoleStatusReq {
  repeated int64 ids = 1; //角色id
  int32 status = 5; //状态(1:正常，0:禁用)
  string update_by = 10; //更新者
}

message UpdateRoleStatusResp {
  string pong = 1;
}

// 查询角色信息详情
message QueryRoleDetailReq {
  int64 id = 1;
}

message QueryRoleDetailResp {
  int64 id = 1; //角色id
  string role_name = 2; //名称
  string role_key = 3; //角色权限字符串
  int32 data_scope = 4; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
  int32 status = 5; //状态(1:正常，0:禁用)
  string remark = 6; //备注
  int32 del_flag = 7; //删除标志（0代表删除 1代表存在）
  string create_by = 8; //创建者
  string create_time = 9; //创建时间
  string update_by = 10; //更新者
  string update_time = 11; //更新时间

}

// 分页查询角色信息列表
message QueryRoleListReq {
  string role_name = 1; //名称
  string role_key = 2; //角色权限字符串
  int32 data_scope = 3; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
  int32 status = 4; //状态(1:正常，0:禁用)
  int32 del_flag = 5; //删除标志（0代表删除 1代表存在）
  int64 page_num = 6; //第几页
  int64 page_size = 7; //每页的数量
}

message RoleListData {
  int64 id = 1; //角色id
  string role_name = 2; //名称
  string role_key = 3; //角色权限字符串
  int32 data_scope = 4; //数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）
  int32 status = 5; //状态(1:正常，0:禁用)
  string remark = 6; //备注
  int32 del_flag = 7; //删除标志（0代表删除 1代表存在）
  string create_by = 8; //创建者
  string create_time = 9; //创建时间
  string update_by = 10; //更新者
  string update_time = 11; //更新时间

}

message QueryRoleListResp {
  int64 total = 1;
  repeated  RoleListData list = 2;
}

message QueryRoleMenuListReq {
  int64 RoleId = 1;
}

message MenuData {
  int64 id = 1; //编号
  string menu_name = 2; //菜单名称
  int64 parent_id = 3; //父菜单ID，一级菜单为0
  string menu_path = 4; //前端路由
  string menu_perms = 5; //权限标识
  int32 menu_type = 6; //类型 0：目录,1：菜单,2：按钮,3：外链
  string menu_icon = 7; //菜单图标
  int32 menu_sort = 8; //菜单排序
  string create_by = 9; //创建者
  string create_time = 10; //创建时间
  string update_by = 11; //更新者
  string update_time = 12; //更新时间
  int32 menu_status = 13; //菜单状态
  int32 is_deleted = 14; //是否删除  0：否  1：是
  int32 is_visible = 15; //是否可见  0：否  1：是
  string remark = 16; //备注信息
  string vue_path = 17; //vue系统的path
  string vue_component = 18; //vue的页面
  string vue_icon = 19; //vue的图标
  string vue_redirect = 20; //vue的路由重定向
  string background_url = 21; //接口地址

}
message QueryRoleMenuListResp {
  repeated MenuData list = 1;
  repeated int64 MenuIds = 2;
}

message UpdateRoleMenuReq {
  int64 roleId = 1;
  repeated int64 menuIds = 2;
}

message UpdateRoleMenuResp {
  string pong = 1;
}

message QueryRoleUserListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 role_id = 3;//角色id
  int64 is_exist = 4; //角色是否已经拥有用户
  string mobile = 5; //手机号
  string user_name = 6; //昵称
}
message UserData {
  int64 id = 1; //用户id
  string mobile = 2; //手机号码
  string user_name = 3; //用户账号
  string nick_name = 4; //用户昵称
  string user_type = 5; //用户类型（00系统用户）
  string avatar = 6; //头像路径
  string email = 7; //用户邮箱
  string password = 8; //密码
  int32 status = 9; //状态(1:正常，0:禁用)
  int64 dept_id = 10; //部门ID
  string login_ip = 11; //最后登录IP
  string login_date = 12; //最后登录时间
  string login_browser = 13; //浏览器类型
  string login_os = 14; //操作系统
  string pwd_update_date = 15; //密码最后更新时间
  string remark = 16; //备注
  int32 del_flag = 17; //删除标志（0代表删除 1代表存在）
  string create_by = 18; //创建者
  string create_time = 19; //创建时间
  string update_by = 20; //更新者
  string update_time = 21; //更新时间

}
message QueryRoleUserListResp {
  repeated UserData list = 1;
  int64 total = 2;
}


message CancelAuthorizationReq {
  int64 roleId = 1;
  repeated int64 userIds = 2;
  int64 is_exist = 3; //0：取消授权，1：确认授权
}

message CancelAuthorizationResp {
  string pong = 1;
}


// 角色信息
service RoleService {
  // 添加角色信息
  rpc AddRole(AddRoleReq) returns (AddRoleResp){}
  // 删除角色信息
  rpc DeleteRole(DeleteRoleReq) returns (DeleteRoleResp){}
  // 更新角色信息
  rpc UpdateRole(UpdateRoleReq) returns (UpdateRoleResp ){}
  // 更新角色信息状态
  rpc UpdateRoleStatus(UpdateRoleStatusReq) returns (UpdateRoleStatusResp ){}
  // 查询角色信息详情
  rpc QueryRoleDetail(QueryRoleDetailReq) returns (QueryRoleDetailResp){}
  // 查询角色信息列表
  rpc QueryRoleList(QueryRoleListReq) returns (QueryRoleListResp){}

  //查询角色与菜单的关联
  rpc QueryRoleMenuList(QueryRoleMenuListReq) returns(QueryRoleMenuListResp);
  //更新角色与菜单的关联
  rpc UpdateMenuRoleList(UpdateRoleMenuReq) returns(UpdateRoleMenuResp);

  //查询角色的用户关联
  rpc QueryRoleUserList(QueryRoleUserListReq) returns(QueryRoleUserListResp);

  //取消授权/确认授权
  rpc CancelAuthorization(CancelAuthorizationReq) returns(CancelAuthorizationResp);

}
